Fixed header background color on "Our Team" page to make icons from navbar more visible.

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2332,11 +2332,14 @@ body {
 }
 .cid-rz076v18rO {
   padding-top: 90px;
-  padding-bottom: 0px;
-  background-color: #efefef;
+  padding-bottom: 60px;
+  background-color: #073b4c;
 }
 .cid-rz076v18rO P {
   color: #767676;
+}
+.cid-rz076v18rO H1 {
+  color: #ffffff;
 }
 .cid-ryHqHQEBF3 {
   padding-top: 0px;
